<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_poem"
            android:title="@string/my_poem"/>
        <item
            android:id="@+id/nav_collection"
            android:title="@string/collection"/>
    </group>

    <item android:title="@string/function">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/setting"/>
        </menu>
    </item>

</menu>
